Fix ID selector parsing to check for a valid identifier.  Bug 239079, r+sr=dbaron, a=chofmann